--- a/ERP/src/Catalogs/ПрайсЛист/Forms/ФормаСписка.xml
+++ b/ERP/src/Catalogs/ПрайсЛист/Forms/ФормаСписка.xml
@@ -1,31 +1,21 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <MetaDataObject xmlns="http://v8.1c.ru/8.3/MDClasses" xmlns:app="http://v8.1c.ru/8.2/managed-application/core" xmlns:cfg="http://v8.1c.ru/8.1/data/enterprise/current-config" xmlns:cmi="http://v8.1c.ru/8.2/managed-application/cmi" xmlns:ent="http://v8.1c.ru/8.1/data/enterprise" xmlns:lf="http://v8.1c.ru/8.2/managed-application/logform" xmlns:style="http://v8.1c.ru/8.1/data/ui/style" xmlns:sys="http://v8.1c.ru/8.1/data/ui/fonts/system" xmlns:v8="http://v8.1c.ru/8.1/data/core" xmlns:v8ui="http://v8.1c.ru/8.1/data/ui" xmlns:web="http://v8.1c.ru/8.1/data/ui/colors/web" xmlns:win="http://v8.1c.ru/8.1/data/ui/colors/windows" xmlns:xen="http://v8.1c.ru/8.3/xcf/enums" xmlns:xpr="http://v8.1c.ru/8.3/xcf/predef" xmlns:xr="http://v8.1c.ru/8.3/xcf/readable" xmlns:xs="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="2.18">
-	<Subsystem uuid="1c5d4a82-c5ae-4836-b1a0-d2d3088a244f">
+	<Form uuid="3aee1d48-c7e9-4e8c-87e9-67cbffa666f9">
 		<Properties>
-			<Name>Тарифы</Name>
+			<Name>ФормаСписка</Name>
 			<Synonym>
 				<v8:item>
 					<v8:lang>ru</v8:lang>
-					<v8:content>Тарифы</v8:content>
+					<v8:content>Форма списка</v8:content>
 				</v8:item>
 			</Synonym>
 			<Comment/>
-			<IncludeHelpInContents>true</IncludeHelpInContents>
-			<IncludeInCommandInterface>true</IncludeInCommandInterface>
-			<UseOneCommand>false</UseOneCommand>
-			<Explanation/>
-			<Picture>
-				<xr:Ref>CommonPicture.Бирка</xr:Ref>
-				<xr:LoadTransparent>true</xr:LoadTransparent>
-			</Picture>
-			<Content>
-				<xr:Item xsi:type="xr:MDObjectRef">Catalog.Тариф</xr:Item>
-				<xr:Item xsi:type="xr:MDObjectRef">Catalog.ПрайсЛист</xr:Item>
-				<xr:Item xsi:type="xr:MDObjectRef">Catalog.ПланПодписки</xr:Item>
-				<xr:Item xsi:type="xr:MDObjectRef">4161aa97-5b36-46c1-8c54-072175b9535d</xr:Item>
-				<xr:Item xsi:type="xr:MDObjectRef">InformationRegister.ИсторияИзмененийОсновныхПрайсЛистов</xr:Item>
-			</Content>
+			<FormType>Managed</FormType>
+			<IncludeHelpInContents>false</IncludeHelpInContents>
+			<UsePurposes>
+				<v8:Value xsi:type="app:ApplicationUsePurpose">PlatformApplication</v8:Value>
+				<v8:Value xsi:type="app:ApplicationUsePurpose">MobilePlatformApplication</v8:Value>
+			</UsePurposes>
 		</Properties>
-		<ChildObjects/>
-	</Subsystem>
+	</Form>
 </MetaDataObject>
